# JP_vocab

./: EditorWindow.qml  Main.qml  Mode1Window.qml  Mode2Window.qml  README.md  main.cpp  words.cpp  words.h  wordsmodel.cpp  wordsmodel.h
WordsList/: CMakeLists.txt  EditorWindow.qml  Mode1Window.qml  main.cpp  wordsmodel.cpp  wordsmodel.h
